@@ -1,3 +1,11 @@
+2010-08-18  Sancho Lerena <slerena@artica.es>
+
+        * lib/PandoraFMS/Core.pm: Alerts now uses _timestamp_ macro with the
+        timestamp of the data (if provided), not the present time. Thanks
+        to Daniel Vasconcelos for his patch (SF Tracker id #3044326).
+
+	* *.spec. Updated specs, I forgot to commit some changes.
+
 2010-07-20  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/SNMPServer.pm: Merged from trunk.
